--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,7 @@
     <title>Coursera</title>
   </head>
   <body>
-    <h1>Coursera</h1>
+    <h1>Courser</h1>
     <body>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea vel esse
       officia illo repudiandae magni, autem numquam voluptatem dicta provident
